--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ cmake_minimum_required(VERSION 3.9)
 project(project)
 add_subdirectory(src/generator)
 add_subdirectory(src/utils)
-
-target_include_directories(generator PUBLIC include)
-target_include_directories(utils PUBLIC include)
+add_subdirectory(src/engine)
+add_subdirectory(src/pugixml)
