--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -5,6 +5,9 @@ include_directories(${OpenGL_INCLUDE_DIRS})
 link_directories(${OpenGL_LIBRARY_DIRS})
 add_definitions(${OpenGL_DEFINITIONS})
 
+add_executable(engine main.cpp camera.cpp model.cpp)
+
+
 if(NOT OPENGL_FOUND)
     message(ERROR " OPENGL not found!")
 endif(NOT OPENGL_FOUND)
@@ -26,6 +29,12 @@ if  (WIN32)
     endif(EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll" )    
     
     set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+
+    
+    target_link_libraries(engine utils pugixml
+                ${OPENGL_LIBRARIES}
+                ${GLUT_LIBRARIES}
+                ${TOOLKITS_FOLDER}/glut/glut32.lib)
     
 else (WIN32) #Linux and Mac
 
@@ -36,14 +45,10 @@ else (WIN32) #Linux and Mac
     if(NOT GLUT_FOUND)
        message(ERROR ": GLUT not found!")
     endif(NOT GLUT_FOUND)
+
+    target_link_libraries(engine utils pugixml
+                ${OPENGL_LIBRARIES}
+                ${GLUT_LIBRARIES})
     
 
 endif(WIN32)
-
-
-add_executable(engine main.cpp camera.cpp model.cpp)
-
-target_link_libraries(engine utils pugixml
-                ${OPENGL_LIBRARIES}
-                ${GLUT_LIBRARIES}
-                ${TOOLKITS_FOLDER}/glut/glut32.lib)
