--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -5,7 +5,8 @@ include_directories(${OpenGL_INCLUDE_DIRS})
 link_directories(${OpenGL_LIBRARY_DIRS})
 add_definitions(${OpenGL_DEFINITIONS})
 
-add_executable(engine main.cpp camera.cpp model.cpp parsing.cpp)
+add_executable(engine main.cpp camera.cpp model.cpp parsing.cpp group.cpp
+    transformations/translation.cpp transformations/rotation.cpp transformations/scalation.cpp )
 
 
 if(NOT OPENGL_FOUND)
