Camera view added and CylindricalCoord added

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -6,7 +6,7 @@ link_directories(${OpenGL_LIBRARY_DIRS})
 add_definitions(${OpenGL_DEFINITIONS})
 
 add_executable(engine main.cpp camera.cpp model.cpp parsing.cpp group.cpp
-    transformations/translation.cpp transformations/rotation.cpp transformations/scalation.cpp )
+    transformations/translation.cpp transformations/rotation.cpp transformations/scale.cpp )
 
 
 if(NOT OPENGL_FOUND)
