--- a/src/generator/CMakeLists.txt
+++ b/src/generator/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 
 
-add_executable(generator main.cpp plane.cpp box.cpp cone.cpp sphere.cpp)
+add_executable(generator main.cpp plane.cpp box.cpp cone.cpp sphere.cpp torus.cpp)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
